# EmbeddedSystemsProg

./: CMakeLists.txt  README.md  bmp388.c  bmp388_driver.h  decode.py  decode_new.py  secrets.cmake  sensor_driver.c  storage_driver.c
HMAC_SHA256/: CMakeLists.txt  hmac_sha256.c  hmac_sha256.h
HMAC_SHA256/mbedtls_config/: mbedtls_config.h
activation_driver/: CMakeLists.txt  activation_driver.c  activation_driver.h
bmp388/: CMakeLists.txt  Compare_temp.c  bmp388.c  bmp388_driver.c  bmp388_driver.h  bmp388_example.c  flash_helpers.c  flash_helpers.h  sensor_driver.c  storage_driver.c
bmp388_compare/: CMakeLists.txt  Compare_temp.c  bmp388_driver.c  bmp388_driver.h  i2c_scan_example.c
main/: CMakeLists.txt  main.c
master_pico/: CMakeLists.txt  master_pico.c
ntp_driver/: CMakeLists.txt  ntp_driver.c  ntp_driver.h
slave_pico/: CMakeLists.txt  slave_pico.c
temp_example/: CMakeLists.txt  temp_example.c  temp_sensor.c  temp_sensor.h
uart_driver/: CMakeLists.txt  uart_driver.c  uart_driver.h  uart_driver_test.c
usb/: CMakeLists.txt  usb.c  usb.h
